# EAModelSet

./: .gitignore  README.md  archimate-model.schema.json  ea-modelset.schema.json  licenses.json  model_infos_with_license.json  startNeo4j.sh
.github/workflows/: static.yml
cli-app/: .gitignore  README.md  pom.xml
crawlers/: README.md  github-crawler.py  gmm-crawler.py  requirements.txt
dataset/: dataset.json  models.json
dataset/individual-models/: 001bf72f.json  0132cf79.json  0133f8ac.json  030fbad3-cdb2-4ed5-96b5-b03a569eb482.json  03b6a9e0-41fa-4d4f-85b4-6e13f308bb9a.json  03f9559e.json  040e9057.json  0476a732-40e4-4028-ac1b-616b4966be30.json  074452c2-669d-42f0-a483-919b12e2a4f7.json  076abb71-28da-42ee-b1e8-edeca1a7e431.json  0908a44c.json  0a4ff1ab.json  0aabff01.json  (+1354 more)
docs/: json_schemas.md
examples/: python-example.ipynb
python-app/: README.md
python-cli/: README.md  pyproject.toml  start.sh
python-cli/eamodelset/: __init__.py  cli.py  config.py  constants.py  dataset.py  main.py
python-cli/eamodelset/commands/: add.py  gui.py  init.py  list.py  transform.py
python-cli/eamodelset/common/: utils.py
python-cli/eamodelset/gui/: home_page.py  main.py  theme.py
python-cli/eamodelset/parser/: archi_parser.py  constants.py  model.py  parse.py  sap_sam_parser.py  utils.py
python-cli/tests/: test_eamodelset.py
python-lib/: README.md  setup.py
schemas/: ea-model.schema.json
scripts/: github-crawler.py  startMongoDB.sh  startNeo4j.sh
vue-website/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vue.config.js
(+7596 files in other folders)
