[tool.poetry]
name = "eamodelset"
version = "0.1.0"
description = "CLI for the EA ModelSet"
authors = ["plglaser <plg741@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
eamodelset = "eamodelset.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
